<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">天天壁纸</string>
	<string name="title">标题</string>
	<string name="set_as_wallpaper">设为壁纸</string>
	<string name="download">下载</string>
	<string name="set_success">设置成功</string>
	<string name="download_succss">下载成功</string>
	<string name="manage_pic">管理壁纸</string>
	<string name="clear_cache">清除缓存</string>
	<string name="cache_clean">没有缓存</string>
	<string name="cleaning">清除中·····</string>
	<string name="clear_cache_finish">缓存已清除</string>
	<string name="about">关于</string>
	<string name="manage">管理</string>
	<string name="not_download">你还没有下载过壁纸</string>
	<string name="cancle">取消</string>
	<string name="delete">删除</string>
	<string name="delete_pic">删除壁纸</string>
	<string name="delete_success">删除成功</string>
	<string name="delete_confirm">确定要删除选择的壁纸吗？</string>
	<string name="enter">确定</string>
	<string name="detailed_information">详细信息</string>
	<string name="type">类型</string>
	<string name="size">大小</string>
	<string name="location">位置</string>
	<string name="time">时间</string>
	<string name="pixel">像素</string>
	<string name="measurement">尺寸</string>
	<string name="slogan">天天换壁纸，天天好心情!</string>
	<string name="info">详情请访问天天壁纸官方网站</string>
	<string name="website">www.day5day.com</string>
	<string name="exit">退出天天壁纸</string>
	<string name="exit_confirm">再按一次退出天天壁纸！</string>
</resources>