<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >
    <ImageView 
        android:id="@+id/loading_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100.0dp"
        android:src="@drawable/about_logo"
        />
	<TextView 
	    android:id="@+id/loading_app_name"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_centerHorizontal="true"
	    android:layout_below="@id/loading_logo"
	    android:layout_marginTop="30.0dp"
	    android:text="@string/app_name"
	    style="@style/about_app_name"
	    />
	<TextView 
	    android:id="@+id/loading_app_slogan"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_centerHorizontal="true"
	    android:layout_below="@id/loading_app_name"
	    android:layout_marginTop="15.0dp"
	    android:text="@string/slogan"
	    style="@style/about_slogan"
	    />
 	<ImageView 
	    android:id="@+id/about_progress"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_centerHorizontal="true"
	    android:layout_below="@id/loading_app_slogan"
	    android:layout_marginTop="20.0dp"
	    />
	<LinearLayout 
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:orientation="vertical"
	    android:gravity="center_horizontal"
	    android:layout_centerHorizontal="true"
	    android:layout_alignParentBottom="true"
	    android:layout_marginBottom="10.0dp"
	    >
	    <TextView 
		    android:id="@+id/loading_info"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="@string/info"
		    style="@style/about_footter"
		    />
		<TextView 
		    android:id="@+id/loading_website"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_marginTop="2.0dp"
		    android:text="@string/website"
		    style="@style/about_footter"
		    />
	</LinearLayout>
</RelativeLayout>