<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/gray"
    android:orientation="vertical" >
    <GridView
        android:id="@+id/manage_pic_gridview"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:horizontalSpacing="1.0dp"
        android:verticalSpacing="1.0dp"
        android:fadingEdge="none"
        android:numColumns="2"
        android:cacheColorHint="@color/transparent"
        android:background="@color/gray"
        android:fastScrollEnabled="false"
        android:listSelector="@color/transparent"
        />
    <RelativeLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@drawable/bg_tools_bar"
        android:padding="5.0dp"
        android:layout_margin="10.0dp"
        >
        <TextView 
            android:id="@+id/manage_pic_tools_bar_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/tools_bar_text"
            android:text="@string/manage"
            android:layout_centerInParent="true"
            />
        <ImageButton 
            android:id="@+id/manage_pic_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:paddingLeft="10.0dp"
            android:paddingRight="10.0dp"
            android:src="@drawable/tools_bar_edit"
            android:background="@drawable/sl_tools_bar_button"
            />
        <Button 
            android:id="@+id/manage_pic_cancle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:text="@string/cancle"
            style="@style/tools_bar_button_text"
            android:paddingLeft="10.0dp"
            android:paddingRight="10.0dp"
            android:background="@drawable/sl_tools_bar_button"
            android:visibility="gone"
            />
        <Button 
            android:id="@+id/manage_pic_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:text="@string/delete"
            android:paddingLeft="10.0dp"
            android:paddingRight="10.0dp"
            style="@style/tools_bar_button_text"
            android:background="@drawable/sl_tools_bar_button"
            android:visibility="gone"
            />
    </RelativeLayout>
    <LinearLayout 
        android:id="@+id/manage_pic_warn"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:paddingTop="100.0dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:visibility="gone"
        >
        <ImageView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/image_search_no_result_smiley"
            />
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20.0dp"
            android:text="@string/not_download"
            style="@style/warn_text"
            />
    </LinearLayout>
</RelativeLayout>